[package]
name = "rs-mem"
version = "0.1.0"
authors = ["Raja Lehtihet <raja.lehtihet@gmail.com>", "Wael El Oraiby <wael.eloraiby@gmail.com>"]
edition = "2018"
description = "minimal memory helpers (no dependency on std)"
repository = "https://github.com/NeoCogi/rs-mem"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-ctypes = "0.1.1"
libc = "0.2.72"
